# racer

./: .gitignore  LICENSE  README.md  main.cpp
documentation/: AnalysisOfAlternativesLanguage.md  GenerateDocs.md  GettingStarted.md  ProjectManagementPlan.md  SETUP_Windows.md  Testing_Windows.md
engine/: CMakeLists.txt  Doxyfile  app.h  app_commands.h  camera_target.h  child.h  children.h  circle.h  colour.h  engine.h  entity.h  event.h  layout.h  outline.h  query.h  rectangle.h  render.h  render_context.h  render_utils.h  rotation.h  scale.h  target.h  text.h  text_box.h  texture.h  timing.h  transform.h  triangle.h  vector_utils.h  window.h  zindex.h
engine/render/: circle.h  rectangle.h  text.h  texture.h  triangle.h
engine/tests/: rotation.cpp  tests.cpp  vector_utils.cpp
engine/tests/integration_tests/: basics.cpp  entities.cpp  plugins.cpp  queries.cpp
engine/tests/unit_tests/: rotation.cpp  vector_utils.cpp
examples/breakout/: CMakeLists.txt  main.cpp
examples/breakout/src/: ball.h  brick.h  drag_and_drop_circles.h  gravity.h  physics.h  player.h  util.h  velocity.h
game/: CMakeLists.txt  Doxyfile  README.md  main.cpp
game/levels/: Grass Plains.json  Highway.json  Mountains.json
game/src/: acceleration.h  arguments.h  arrow_keys_resource.h  camera.h  car.h  collisions.h  count_down_timer.h  cross_line.cpp  cross_line.h  currently_loaded_map.h  debug.h  finish_line.h  fuel.h  game_state.h  gravity.h  ground.h  image_dimensions.h  map.h  maximum_velocity.h  pause_state.h  player.h  players.h  rectangle_utils.h  rotational_velocity.h  segment.h  shift_key_resource.h  spawn_transform.h  splash_screen.h  utils.h  vehicle.h  velocity.h
game/src/debug/: clipboard.h  deletable.h  draggable.h  pausable.h  reset_camera.h  resizeable.h  rotatable.h  rotateable.h  scroll_camera.h  selectable.h  serialization.h  spawn_vehicle.h  ui.h
game/src/ui/: background.h  background2.h  display_course.h  icon.h  main_menu.h  map_select.h  result_screen.h  splash_screen.h  vehicle_select.h  vehicles.h
game/tests/: collisions.cpp  rectangle_utils.cpp  sanity_check.cpp  tests.cpp  velocity.cpp
game/tests/integration_tests/: gravity.cpp  maximum_velocity.cpp  velocity.cpp
game/tests/unit_tests/: arguments.cpp  collisions.cpp  rectangle_utils.cpp  velocity.cpp
game/vehicles/: Checo.json  Max.json
src/: app_state.h  drag_and_drop_circles.h  util.h
